--- a/client/nginx/.travis.yml
+++ b/client/nginx/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t react-test ./client/Dockerfile.dev ./client/ 
 
 script:
-  - docker run react-test npm test 
+  - docker -e CI=true run react-test npm test 
 
 after_success:
   - docker build -t multi-client ./client/ 
