--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t react-test -f ./client/Dockerfile.dev ./client/ 
 
 script:
-  - docker -e CI=true run react-test npm test 
+  - docker  run -e CI=true react-test npm run test 
 
 after_success:
   - docker build -t multi-client ./client/ 
