--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,16 @@ script:
   - docker  run -e CI=true react-test npm run test 
 
 after_success:
-  - docker build -t multi-client ./client/ 
-  - docker build -t multi-nginx ./nginx/ 
-  - docker build -t multi-server ./server/ 
-  - docker build -t multi-worker ./worker/
+  - docker build -t amitsinha98/multi-client ./client/ 
+  - docker build -t amitsinha98/multi-nginx ./nginx/ 
+  - docker build -t amitsinha98/multi-server ./server/ 
+  - docker build -t amitsinha98/multi-worker ./worker/
 
   #Login in Docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
-  - docker push multi-client
-  - docker push multi-nginx
-  - docker push multi-server
-  - docker push multi-worker 
+  - docker push amitsinha98/multi-client
+  - docker push amitsinha98/multi-nginx
+  - docker push amitsinha98/multi-server
+  - docker push amitsinha98/multi-worker 
 
